--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     </script>
   </head>
   <body>
+    <div
+      class="fb-like"
+      data-share="true"
+      data-width="450"
+      data-show-faces="true">
+    </div>
     <div id="unityContainer" style="width: 414px; height: 736px; margin: auto"></div>
   </body>
 </html>
